--- a/src/app/components/layout-header/layout-header.component.html
+++ b/src/app/components/layout-header/layout-header.component.html
@@ -1,6 +1,11 @@
-<header class="bg-blue-500 p-4">
-    <div class="grid grid-cols-3 items-center">
-        <div class="text-white font-bold">SEPLAG</div>
-        <div class="text-white text-lg font-semibold text-center">Rastreio de Procurados</div>
-    </div>
+<header class="flex items-center bg-black p-2.5 shadow font-roboto">
+    <img src="assets/logos/logo-pjc.png" alt="Anota Ai Logo" class="h-[50px] mr-5" />
+    <section>
+        <h2 class="m-0 text-white text-2xl">Desafio Técnico de Desenvolvedor Front-End - SEPLAG</h2>
+        <div class="flex gap-1 items-center justify-start text-gray-600 italic">
+            <hr class="m-0 w-4 border-t border-gray-600" />
+            <span>André Parada de Oliveira Machado</span>
+            <hr class="m-0 w-12 border-t border-gray-600" />
+        </div>
+    </section>
 </header>
