update 11 files and create 14 files

--- a/src/app/components/wanted-person-card/wanted-person-card.component.html
+++ b/src/app/components/wanted-person-card/wanted-person-card.component.html
@@ -1,4 +1,4 @@
-<div class="min-w-[300px] max-w-[300px]">
+<div (click)="onCardClick()" class="min-w-[300px] max-w-[300px] cursor-pointer">
     <section
         class="relative h-[400px] overflow-hidden font-sans border border-gray-300 rounded-lg shadow transition-transform duration-300 bg-white hover:scale-105 hover:shadow-lg"
     >
