--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen gap-4">
     <LayoutHeader />
-    <main class="flex-grow pt-4">
+    <main class="flex-grow">
         <router-outlet></router-outlet>
     </main>
     <LayoutFooter />
