update 14 files, create 17 files and copy 1 file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <LayoutHeader />
     <main class="flex-grow">
         <router-outlet></router-outlet>
+        <router-outlet name="modal"></router-outlet>
     </main>
     <LayoutFooter />
 </div>
