--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,9 +1,23 @@
+<label
+    for="input"
+    class="text-sm font-medium"
+    *ngIf="label"
+    [ngClass]="{
+        'text-red-600': hasError,
+        'text-gray-600': !hasError,
+    }"
+    >{{ label }}</label
+>
 <input
     type="text"
     [value]="value"
     [placeholder]="placeholder"
     (input)="handleInput($event)"
-    (blur)="onTouched()"
+    (blur)="onBlur()"
     [disabled]="disabled"
-    class="block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring focus:ring-indigo-500 focus:border-indigo-500"
+    [ngClass]="{
+        'border-red-600 focus:border-red-600 focus:ring-red-600': hasError,
+        'border-gray-300': !hasError,
+    }"
+    class="block w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring focus:ring-indigo-500 focus:border-indigo-500"
 />
